style: change web app name in by modifying localization name

--- a/lib/src/localization/app_en.arb
+++ b/lib/src/localization/app_en.arb
@@ -1,5 +1,5 @@
 {
-  "appTitle": "tandem_typer",
+  "appTitle": "Tandem Typer",
   "@appTitle": {
     "description": "The title of the application"
   }
